--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,6 +2,4 @@
 
 <input type="text" class="search" placeholder="Search" [(ngModel)]="searchTerm" (keyup)="search()">
 
-<ul class="results">
-  <li *ngFor="let track of tracks">{{track}}</li>
-</ul>
+<mus-track-list [tracks]="tracks"></mus-track-list>
