--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,4 +2,4 @@
 
 <input type="text" class="search" placeholder="Search" [(ngModel)]="searchTerm" (keyup)="search()">
 
-<mus-track-list [tracks]="tracks"></mus-track-list>
+<mus-track-list [(tracks)]="tracks"></mus-track-list>
