styling all that stuff

--- a/src/app/ui/components/track-list-item/track-list-item.component.html
+++ b/src/app/ui/components/track-list-item/track-list-item.component.html
@@ -1,2 +1,3 @@
-<br>
-{{track.id}} • {{track.price}} • {{track.length}} • {{track.genre}}
+<div class="track list item">
+  {{track.id}} • {{track.price}} • {{track.length}} • {{track.genre}}
+</div>
