--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
-.container {
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+.main.container {
   width: 100%;
   height: 100%;
-  display: flex;
-  padding: 2em;
 }
