--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,9 @@
-<h1 class="title">Musical Stuff</h1>
+<div class="container">
+  <h1 class="title">Musical Stuff</h1>
 
-<input type="text" class="search" placeholder="Search" [(ngModel)]="searchTerm" (keyup)="search()">
+  <div class="search field">
+    <input type="text" placeholder="Search" [(ngModel)]="searchTerm" (keyup)="search()">
+  </div>
 
-<mus-track-list [(tracks)]="tracks"></mus-track-list>
+  <mus-track-list [(tracks)]="tracks" [hidden]="!tracks && false"></mus-track-list>
+</div>
