styling track-list-item component

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -9,7 +9,8 @@
 .title {
   text-align: center;
   font-family: 'Pacifico', cursive;
-  color: #ffffff;
+  color: whitesmoke;
+  font-size: 4em;
 }
 
 .search.field {
