--- a/src/app/ui/components/track-list/track-list.component.scss
+++ b/src/app/ui/components/track-list/track-list.component.scss
@@ -7,16 +7,12 @@
     color: white;
     border: none;
     outline: none;
-    padding: 10px;
+    padding: 6px 8px;
     border-radius: 5px;
-    font-size: .65em;
+    font-size: .6em;
     text-transform: uppercase;
     margin: 5px;
-    box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.4);
     cursor: pointer;
-
-    &.active {
-
-    }
   }
 }
