--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,5 +5,5 @@
     <input type="text" placeholder="Search" [(ngModel)]="searchTerm" (keyup)="search()">
   </div>
 
-  <mus-track-list [(tracks)]="tracks" [hidden]="!tracks"></mus-track-list>
+  <mus-track-list></mus-track-list>
 </div>
