listen page and player component

--- a/src/app/ui/components/track-list-item/track-list-item.component.html
+++ b/src/app/ui/components/track-list-item/track-list-item.component.html
@@ -10,7 +10,7 @@
     </p>
   </div>
 
-  <div class="listen">
+  <div class="listen" routerLink="listen/{{track.id}}">
     &#9658;<br>
     {{track.formattedLength()}}
   </div>
