--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -17,7 +17,7 @@
   width: 100%;
   input {
     width: calc(100% - 20px - 6px); // 100% minus padding left & right minus border
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     font-size: 1.5em;
     padding: 10px;
     border-radius: 4px;
