--- a/src/app/ui/pages/listen/listen.component.html
+++ b/src/app/ui/pages/listen/listen.component.html
@@ -1,5 +1,15 @@
 <div class="player container">
   <div *ngIf="track">
     <mus-track-player [track]="track" (forward)="goNextTrack()" (backward)="goPrevTrack()"></mus-track-player>
+
+    <div class="share buttons">
+      <a class="facebook share button" musFacebookShare [text]="getShareText()">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+
+      <a class="twitter share button" musTwitterShare [text]="getShareText()">
+        <i class="fab fa-twitter"></i>
+      </a>
+    </div>
   </div>
 </div>
